--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.14",
     "axios": "^0.18.0",
+    "graphql": "^0.13.2",
     "keen-ui": "^1.0.1",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-apollo": "^3.0.0-beta.19"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
